--- a/control
+++ b/control
@@ -24,6 +24,15 @@ echo -n "Stopping Tomcat"
 return 0
 }
 
+restart() {
+	echo -n "Restarting"
+	$CATALINA_HOME/bin/shutdown.sh
+	echo -n "Stopping Tomcat"
+	echo "Starting Tomcat"
+	$CATALINA_HOME/bin/startup.sh
+	return 0
+}
+
 case $1 in
 
 start)
