--- a/config/common.yaml
+++ b/config/common.yaml
@@ -1,6 +1,6 @@
 ---
 
-git_repo          : 'git@github.com:DSpace/DSpace.git'
+git_repo          : 'git@github.com:umd-lib/drum'
 git_branch        : 'master'
 mvn_version       : '3.0.5'
 mvn_params        : '-Denv=vagrant'
@@ -8,10 +8,10 @@ mvn_params        : '-Denv=vagrant'
 # NOTE: if you change 'git_branch' above, you MAY need to modify this 'ant_installer_dir'
 # setting. It must be set to the directory where the Ant-based installer ends up, after
 # 'mvn package' is run. For now, this is hardcoded (see DS-1760 ticket).
-ant_installer_dir : '/home/vagrant/dspace-src/dspace/target/dspace-installer'
-admin_firstname   : 'DSpaceDemo'
+ant_installer_dir : '/apps/drum'
+admin_firstname   : 'DrumDev'
 admin_lastname    : 'Admin'
-admin_email       : 'dspacedemo+admin@gmail.com'
+admin_email       : 'drumdev+admin@gmail.com'
 admin_passwd      : 'vagrant'
 admin_language    : 'en'
 
