LIBDRUM-330 - Updated the documentation.
Updated the documentation to link to the Drum Installation Documentation (https://github.com/umd-lib/drum/blob/drum-develop/dspace/docs/Drum41LocalInstallation.md) for the Drum Setup Steps

https://issues.umd.edu/browse/LIBDRUM-330

--- a/config/common.yaml
+++ b/config/common.yaml
@@ -3,7 +3,7 @@
 git_repo          : 'git@github.com:umd-lib/drum'
 git_branch        : 'master'
 mvn_version       : '3.0.5'
-mvn_params        : '-Denv=vagrant'
+mvn_params        : '-Denv=local'
 
 # NOTE: if you change 'git_branch' above, you MAY need to modify this 'ant_installer_dir'
 # setting. It must be set to the directory where the Ant-based installer ends up, after
