LIBDRUM-413. Setup fake email smtp for vagrant-drum.
fakesmtp will start on provisioning

https://issues.umd.edu/browse/LIBDRUM-413

--- a/config/fakesmtp.conf
+++ b/config/fakesmtp.conf
@@ -1,7 +1,7 @@
 description "Service for a fakeSMTP server"
 author "Vivian Thayil"
 
-start on filesystem or runlevel [2345]
+start on vagrant-ready
 stop on shutdown
 
 script 
